WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303476
[blocks-in-inline] Wrong render tree shape after block switches to absolute positioning
https://bugs.webkit.org/show_bug.cgi?id=303476
Summary
[blocks-in-inline] Wrong render tree shape after block switches to absolute p...
Antti Koivisto
Reported
2025-12-03 07:42:30 PST
Adjust render tree rebuild root when positioning state changes similar to continuations.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-03 07:42:42 PST
<
rdar://problem/165763630
>
Antti Koivisto
Comment 2
2025-12-03 07:44:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54772
EWS
Comment 3
2025-12-03 09:04:01 PST
Committed
303838@main
(fa39bffc16ab): <
https://commits.webkit.org/303838@main
> Reviewed commits have been landed. Closing PR #54772 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug