[blocks-in-inline] Wrong render tree shape after block switches to absolute positioning https://bugs.webkit.org/show_bug.cgi?id=303476 rdar://165763630

Reviewed by Alan Baradlay.

Seen in LayoutTests/fast/block/positioning/out-of-flow-continuation-rebuild.html

Test: fast/inline/blocks-in-inline-rebuild-root.html
* LayoutTests/fast/inline/blocks-in-inline-rebuild-root-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-rebuild-root.html: Added.
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::updateRebuildRoots):

Adjust render tree rebuild root for block-in-inline when positioning state changes similar to continuations.

Canonical link: https://commits.webkit.org/303838@main